--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   auto_size_text: 3.0.0
+  barcode_widget: 2.0.3
   cached_network_image: 3.3.1
   cloud_firestore: 4.15.7
   cloud_firestore_platform_interface: 6.1.8
@@ -44,7 +45,11 @@ dependencies:
   firebase_performance_web: 0.1.4+24
   floating_bottom_navigation_bar: 1.5.2
   flutter_animate: 4.1.1+1
+  flutter_barcode_scanner: 
+    git:
+      url: https://github.com/FlutterFlow/flutter_barcode_scanner
   flutter_cache_manager: 3.3.1
+  flutter_plugin_android_lifecycle: 2.0.17
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
@@ -76,6 +81,7 @@ dependencies:
   sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
   stream_transform: 2.1.0
+  substring_highlight: 1.0.33
   timeago: 3.2.2
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
