--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,7 +55,13 @@
 
 	<key>NSCameraUsageDescription</key>
     <string>In order to scan for barcodes and QR codes, this app requires permission to access the camera.</string>
-
+	<key>PermissionGroupNotification</key>
+    <string>Would you like us to send you Notifications</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>fetch</string>
+        <string>remote-notification</string>
+    </array>
 
 
 	<key>UILaunchStoryboardName</key>
