--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: 4.15.7
   cloud_firestore_platform_interface: 6.1.8
   cloud_firestore_web: 3.10.7
+  cloud_functions: 4.6.7
+  cloud_functions_platform_interface: 5.5.18
+  cloud_functions_web: 4.7.1
   collection: 1.18.0
   dropdown_button2: 2.3.9
   equatable: 2.0.5
@@ -40,6 +43,11 @@ dependencies:
   firebase_core: 2.26.0
   firebase_core_platform_interface: 5.0.0
   firebase_core_web: 2.11.5
+  firebase_crashlytics: 3.4.17
+  firebase_crashlytics_platform_interface: 3.6.24
+  firebase_messaging: 14.7.18
+  firebase_messaging_platform_interface: 4.5.26
+  firebase_messaging_web: 3.6.7
   firebase_performance: 0.9.3+16
   firebase_performance_platform_interface: 0.1.4+24
   firebase_performance_web: 0.1.4+24
@@ -97,11 +105,24 @@ dependency_overrides:
   uuid: ^4.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 3.0.0
+  image: 4.0.17
   lints: 3.0.0
 
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'assets/images/adaptive_foreground_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
