--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
     git:
       url: https://github.com/FlutterFlow/flutter_barcode_scanner
   flutter_cache_manager: 3.3.1
+  flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.17
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
@@ -90,10 +91,12 @@ dependencies:
   stream_transform: 2.1.0
   substring_highlight: 1.0.33
   timeago: 3.2.2
+  universal_io: 2.2.2
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
+  xml: 6.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
