--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,9 +1,9 @@
 flutter_native_splash:
-  color: "#39D2C0"
-  color_dark: "#39D2C0"
+  color: "#000000"
+  color_dark: "#000000"
   android_12:
-    color: "#39D2C0"
-    color_dark: "#39D2C0"
+    color: "#000000"
+    color_dark: "#000000"
   android: true
   ios: true
   web: true
