--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.5+7
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -37,6 +37,9 @@ dependencies:
   collection: 1.18.0
   dropdown_button2: 2.3.9
   equatable: 2.0.5
+  firebase_analytics: 10.8.8
+  firebase_analytics_platform_interface: 3.9.8
+  firebase_analytics_web: 0.5.5+20
   firebase_auth: 4.17.7
   firebase_auth_platform_interface: 7.1.7
   firebase_auth_web: 5.9.7
@@ -118,13 +121,12 @@ dev_dependencies:
 
 
 flutter_launcher_icons:
-  android: 'launcher_icon'
+  android: true
   ios: true
+  remove_alpha_ios: true
   web:
     generate: true
   image_path: 'assets/images/app_launcher_icon.png'
-  adaptive_icon_background: '#ffffff'
-  adaptive_icon_foreground: 'assets/images/adaptive_foreground_icon.png'
 
 
 # For information on the generic Dart part of this file, see the
